# hillel_fastapi

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  routes.py
alembic/: env.py
alembic/versions/: 4913880771eb_create_models.py  f042269e2c21_mig2.py
ops/: start-api.sh
src/: admin.py  base_settings.py  main.py
src/catalogue/: admin.py  repository.py  services.py  views.py
src/catalogue/models/: pydantic.py  sqlalchemy.py
src/common/: service.py
src/common/databases/: postgres.py
src/common/exceptions/: base.py
src/common/repository/: sqlalchemy.py  sqlalchemy_repo.py
src/common/schemas/: common.py
src/general/: views.py
src/users/: admin.py
src/users/models/: sqlalchemy.py
